--- a/whr/store/templates/store/Doc/AddStringPost.html
+++ b/whr/store/templates/store/Doc/AddStringPost.html
@@ -24,7 +24,7 @@
         <input  type="hidden" id="id_iddoc" value="{{docost.id}} " >
         <td  class="border text-end" ><input type="text" id="id_nomerdoc" class="form-control" style="text-align:right" required value="{{docost.nomerdoc}}"></td>
         <td  "class="text-end pb-3"> <input type="date" id="id_datadoc" class="form-control" style="text-align:right" required value="{{docost.datadoc|date:'Y-m-d'}}"></td>
-        <td class="border text-end"> <button type="submit" class="btn  btn-dark btn-sm mb-1 " id="returnJurOst">Сохранить</button></td>
+        <td class="border text-end"> <button type="submit" class="btn  btn-success btn-sm mb-1 " id="returnJurOst">Сохранить</button></td>
     </form>
     </tr>
 </table >
