--- a/whr/store/templates/store/Menu/Docs.html
+++ b/whr/store/templates/store/Menu/Docs.html
@@ -33,7 +33,7 @@
     <h5 class="card-title">Перемещение</h5>
      <img class="card-img-top miniature" src="{% static '/images/report3.png' %}" >
     <p class="card-text">Создание,редактирование, удаление документов при передаче ТМЦ</p>
-    <a href="#" class="btn btn-primary">Журнал документов</a>
+    <a href="{% url 'JurnalMove' %}" class="btn btn-primary">Журнал документов</a>
     </div>
     </div>
 </div>
@@ -51,7 +51,7 @@
 
 </div>
 
- <a href="{% url 'GetActualData' %}" class="btn btn-primary">Данные</a>
+
 
 
 
