--- a/whr/store/templates/store/base.html
+++ b/whr/store/templates/store/base.html
@@ -55,5 +55,6 @@
 {% include 'store/Doc/SaveOstDoc.html' %}
 {% include 'store/Doc/ChangeOstDocString.html' %}
 {% include 'store/Doc/Post_Ajax.html' %}
+{% include 'store/Doc/Move_Ajax.html' %}
 </body>
 </html>
