--- a/whr/store/templates/store/Doc/Move_Ajax.html
+++ b/whr/store/templates/store/Doc/Move_Ajax.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <script>
-$($('#post-move').on).on('click','#id_podraz_move',function(e){
+function GetSumm2(){
+let kol=$("#idmovkol").val();
+
+let price=$("#idmoveprice").val();
+
+
+
+   let nds=$("#idmovends").val();
+   let summa=price*kol
+   let total=summa*((nds/100)+1);
+   $("#idmovesum").val(summa.toFixed(2));
+    $("#idmovetotal").val(total.toFixed(2));
+}
+
+
+$('#post-move').on('click','#id_podraz_move',function(e){
 console.log('Click');
 $('#id_obct_move option').remove();
 });
@@ -24,17 +39,68 @@ console.log(data.select_data);
 x=data.select_data;
 $('#id_obct_move option').remove();
 
-
-
 for(i=0;i<data.select_data.length;i++){
-console.log(x[i])
-$('#id_obct_move').append('<option value="x[i].id">'+x[i].title+'</option>');
+console.log(x[i].id)
+$('#id_obct_move').append('<option value='+x[i].id+'>'+x[i].title+'</option>');
 }
-
-
 
 }
 }
 });
 });
+///////////////////////////Переход в новый документ////////////////////////
+$('#post-move').on('submit',function(e){
+event.preventDefault();
+let podraz=$('#id_podraz_move').val();
+let obct=$('#id_obct_move').val();
+let fio=$('#id_fio_move').val();
+let _csr=$("input[name=csrfmiddlewaretoken]").val();
+console.log(podraz);
+console.log(obct);
+console.log(fio);
+mydata={
+  podraz:podraz,
+  obct:obct,
+  fio:fio,
+  csrfmiddlewaretoken:_csr,
+  }
+$.ajax({
+    url:'/JurnalMove/',
+    method:"POST",
+    data:mydata,
+    dataType:"json",
+success:function(data){
+if (data.status==1){
+console.log(data.unit_data);
+console.log('saved');
+location.href=data.url
+}
+}
+});
+});
+/////////////////////Установка цены из списка////////////
+ $('#id_move_rest').on('change',function(e){
+ let price=$('#id_move_rest option:selected' ).attr('data-price');
+console.log('Clicked select option');
+ console.log(price)
+ $('#idmoveprice').val(parseFloat(price).toFixed(2));
+ });
+
+ $("#idmovekol").keyup(function(){
+   console.log($("#idmovekol").val()* $("#idmovepricel").val());
+
+   });
+
+ $("#idmolekol").change(function(){
+
+
+   });
+$("#idmovends").keyup(function(){
+
+   });
+
+ $("#idmovends").change(function(){
+
+   });
+
 </script>
