--- a/whr/store/templates/store/Doc/AddStringMove.html
+++ b/whr/store/templates/store/Doc/AddStringMove.html
@@ -97,13 +97,14 @@
               <th class="text-end">Сумма с НДС</th>
               </thead>
               <tbody>
+
               <tr>
                 <td>
                  <select  id="id_move_update" class="form-control  " required >
       <option value="" selected ></option>
             {% for item in uniqset %}
             <option value="{{item.title}}" class="text-start"  data-count={{item.count}}
-            data-price={{item.price}}
+            data-price={{item.price}} data-id2="{{item.iddoc}}"
             >{{item.title__title}} Цена: {{item.price}} руб; На складе {{item.count}} {{item.title__izm__title}}
             </option>
             {% endfor %}
@@ -114,15 +115,18 @@
 <td><input type="number" id="editmovesum" class="form-control text-end" step="any" required min="0" readonly></td>
 <td><input type="number" id="editmovends" class="form-control text-end" step="any" required min="0" ></td>
 <td><input type="number" id="editmovetotal" class="form-control text-end" step="any" required min="0" readonly></td>
+
               </tr>
               </tbody>
           </table>
-          <form id="add-postav-post"  method="post">
+         <form id="edit-move-post"  method="post">
 {% csrf_token %}
+
+              <input type="hidden" id="stringiddoc" value="{{docmove.id}}">
 
       </div>
       <div class="modal-footer">
-        <button type="submit" class=" btn btn-primary" data-bs-dismiss="modal" id="savebtnpostav" >Сохранить</button>
+        <button type="submit" class=" btn btn-primary" data-bs-dismiss="modal" id="savebtnedit" >Сохранить</button>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
   </form>
       </div>
