--- a/whr/store/templates/store/base.html
+++ b/whr/store/templates/store/base.html
@@ -16,8 +16,8 @@
 
 <body>
 
-<div class="container-fluid border shadow maincontainer">
-    <div class="row">
+<div class="container-fluid border shadow maincontainer ">
+    <div class="row d-print-none">
         <div class="col-md-12 mb-3 border shadow ">
 
             Центральный склад АО "ЕНСПК"
@@ -30,8 +30,8 @@
         </div>
 
     </div>
-<div class="row">
-    <div class="col-md-2 mb-1 linkarea">
+<div class="row ">
+    <div class="col-md-2 mb-1 linkarea d-print-none">
         {% block LinkArea %}
         LinkArea
         {% endblock LinkArea %}
@@ -44,7 +44,7 @@
     </div>
 
 </div>
- <div class="row">
+ <div class="row d-print-none">
     <div class="col-md-12 logo" >
        АО "ЕнСПК" - 2023
     </div>
