--- a/whr/store/templates/store/Doc/AddStringMove.html
+++ b/whr/store/templates/store/Doc/AddStringMove.html
@@ -14,7 +14,9 @@
         <input type="hidden" value="{{docmove.podraz.pk}}" id="movepodraz">
         <input type="hidden" value="{{docmove.obct.pk}}" id="moveobct">
          <input type="hidden" value="{{docmove.fio.pk}}" id="movefio">
-        <th  style="width:70%" class="  align-middle" >Передача ТМЦ </th>
+        <th  style="width:70%" class="  align-middle" >
+        <img src="../static/images/back.png" width="33px" onclick="history.back();" class="d-print-none" style=" position:relative; float:left;">
+            <div class="pt-1 pl-3 ">Передача ТМЦ</div> </th>
 
 
 <th style="width:10%; " class=" text-end align-middle"> Документ № </th>
