--- a/whr/store/templates/store/Print/PrintMove.html
+++ b/whr/store/templates/store/Print/PrintMove.html
@@ -2,8 +2,10 @@
 {% load static %}
 {% block DataArea %}
 {% load store %}
- <div class="bg-primary text-end pt-1 pb-1">
- <a href="" class="d-print-none"><img src="../static/images/print.png" style="width:30px;margin-right:65px;" id="print-button" ></a>
+ <div class="bg-primary  " style="position:relative;height:45px;">
+     <div style="position:relative; float:left;"><img src="../static/images/back.png" width="45px" onclick="history.back();" class="d-print-none"></div>
+ <div style="position:relative; float:right;"><a href="" class="d-print-none"><img src="../static/images/print.png" style="width:40px;margin-right:10px" id="print-button" ></a>
+ </div>
  </div>
 {{senderfio.title}}
  {% for d in doc %}
@@ -53,6 +55,11 @@
 
 </tbody>
  </table>
+
+ <div class="text-end">Получил ______________________              Отпустил______________________ </div>
+
+
+
  <script>
     const printButton = document.getElementById('print-button')
 
